tests/baselines/reference/requireOfJsonFileWithoutResolveJsonModule.errors.txt
tests/cases/compiler/file1.ts(1,21): error TS2732: Cannot find module './b.json'. Consider using '--resolveJsonModule' to import module with '.json' extension.
tests/cases/compiler/file1.ts(3,21): error TS2732: Cannot find module './b.json'. Consider using '--resolveJsonModule' to import module with '.json' extension.


==== tests/cases/compiler/file1.ts (2 errors) ====
    import b1 = require('./b.json'); // error
                        ~~~~~~~~~~
!!! error TS2732: Cannot find module './b.json'. Consider using '--resolveJsonModule' to import module with '.json' extension.
    let x = b1.a;
    import b2 = require('./b.json'); // error
                        ~~~~~~~~~~
!!! error TS2732: Cannot find module './b.json'. Consider using '--resolveJsonModule' to import module with '.json' extension.
    if (x) {
        let b = b2.b;
        x = (b1.b === b);
    }
    
==== tests/cases/compiler/b.json (0 errors) ====
    contents Not read